<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profile"
        android:fontFamily="@font/david_libre"
        android:icon="@drawable/person_white"
        android:title="פרופיל" />

    <item
        android:id="@+id/home"
        android:title="בית"
        android:fontFamily="@font/david_libre"
        android:icon="@drawable/ic_home"
        />

    <item
        android:id="@+id/games"
        android:fontFamily="@font/david_libre"
        android:icon="@drawable/ic_dashboard"
        android:title="לוח משחקים" />

</menu>